# py-petrol-book

./: .gitignore  README.md  app.py  dev.nix  pyproject.toml
attic/: petrol-book_example.json
py_petrol_book/: app.py
src/: main.py
