[tool.poetry]
name = "py-petrol-book"
version = "0.1.0"
description = "easy way to manage vehicle fuel consumption"
authors = ["Alexander Sommer <xancoder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
